envoy.yaml
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  clusters:
    - name: ratelimit
      type: STRICT_DNS
      connect_timeout: 0.25s
      lb_policy: ROUND_ROBIN
      protocol_selection: USE_CONFIGURED_PROTOCOL
      http2_protocol_options: {}
      load_assignment:
        cluster_name: ratelimit
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: ratelimit
                    port_value: 8081
    - name: ext-authz
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 0.25s
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: ext-authz
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ext-authz
                      port_value: 4000
    - name: backend
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: backend
        endpoints:
          - lb_endpoints:
            - endpoint:
              address:
                socket_address:
                  address: backend
                  port_value: 8123
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8010
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      grpc_service:
                        envoy_grpc:
                          cluster_name: ext-authz
                        timeout: 0.25s
                      transport_api_version: V3
                  - name: envoy.filters.http.ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                      domain: backend
                      request_type: external
                      stage: 0
                      rate_limited_as_resource_exhausted: true
                      failure_mode_deny: false
                      rate_limit_service:
                        grpc_service:
                          envoy_grpc:
                            cluster_name: ratelimit
                          timeout: 0.25s
                        transport_api_version: V3
                  - name: envoy.filters.http.router
                    typed_config: {}
                route_config:
                  name: local_route
                  request_headers_to_remove: [ "Authorization" ]
                  virtual_hosts:
                    - name: local_service
                      domains: [ "*" ]
                      routes:
                        - match: { prefix: "/slowpath" }
                          route:
                            cluster: backend
                            rate_limits:
                              - stage: 0
                                actions:
                                  - { generic_key: { "descriptor_value": "slowpath" } }
                        - match: { prefix: "/" }
                          route:
                            cluster: backend
                            rate_limits:
                              - stage: 0
                                actions:
                                  - { request_headers: { header_name: "x-ext-auth-ratelimit", descriptor_key: "ratelimitkey" } }
                                  - { request_headers: { header_name: ":path", descriptor_key: "path" } }
